compiler/toc_hir_lowering/tests/snapshots/lowering__lower_string_literal-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"abcd'"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..11): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..11): []
        Assign@(FileId(1), 0..11): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..11): String("abcd'")
error in file FileId(1) at 5..11: invalid string literal: missing terminator character

