compiler/toc_hir_lowering/tests/snapshots/lowering__lower_type_def-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "type : forward"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..14): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..14): []
error in file FileId(1) at 5..6: unexpected token
| error in file FileId(1) for 5..6: expected identifier, but found ‘:’

