compiler/toc_hir_lowering/tests/snapshots/lowering__lower_type_def_forward.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "\n    type a : forward\n    type a : int\n    type use_it : a\n    "

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..63): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..58): []
        StmtItem@(FileId(1), 5..21): ItemId(0)
          Type@(FileId(1), 5..21): forward "a"@(FileId(1), 10..11)
        StmtItem@(FileId(1), 26..38): ItemId(1)
          Type@(FileId(1), 26..38): "a"@(FileId(1), 31..32)
            Primitive@(FileId(1), 35..38): Int
        StmtItem@(FileId(1), 43..58): ItemId(2)
          Type@(FileId(1), 43..58): "use_it"@(FileId(1), 48..54)
error in file FileId(1) at 57..58: unsupported type
| error in file FileId(1) for 57..58: this type is not handled yet

